reglinux-qt6: add qt6base-vulkan

--- a/package/reglinux/libraries/reglinux-qt6/Config.in
+++ b/package/reglinux/libraries/reglinux-qt6/Config.in
@@ -46,6 +46,7 @@ config BR2_PACKAGE_REGLINUX_QT6
 	select BR2_PACKAGE_QT6BASE_OPENGL_ES2		if BR2_PACKAGE_REGLINUX_QT6_BUILD_FROM_SOURCE && BR2_PACKAGE_HAS_LIBGLES
 	select BR2_PACKAGE_QT6BASE_EGLFS		if BR2_PACKAGE_REGLINUX_QT6_BUILD_FROM_SOURCE && BR2_PACKAGE_HAS_LIBEGL
 	select BR2_PACKAGE_QT6BASE_XCB			if BR2_PACKAGE_REGLINUX_QT6_BUILD_FROM_SOURCE && BR2_PACKAGE_XORG7
+	select BR2_PACKAGE_QT6BASE_VULKAN		if BR2_PACKAGE_REGLINUX_QT6_BUILD_FROM_SOURCE && BR2_PACKAGE_REGLINUX_VULKAN
 	select BR2_PACKAGE_QT6DECLARATIVE		if BR2_PACKAGE_REGLINUX_QT6_BUILD_FROM_SOURCE
 	select BR2_PACKAGE_QT6MULTIMEDIA		if BR2_PACKAGE_REGLINUX_QT6_BUILD_FROM_SOURCE
 	select BR2_PACKAGE_QT6SHADERTOOLS		if BR2_PACKAGE_REGLINUX_QT6_BUILD_FROM_SOURCE
