--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -1617,30 +1617,29 @@ config BR2_PACKAGE_BATOCERA_RPI_MESA3D
 	bool "batocera.linux driver mesa RPI"
 
 	select BR2_PACKAGE_MESA3D
-	select BR2_PACKAGE_MESA3D_OPENGL_ES
-	select BR2_PACKAGE_MESA3D_OPENGL_EGL
 	select BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_VC4
 	select BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_V3D
+	select BR2_PACKAGE_MESA3D_OPENGL_ES
+	select BR2_PACKAGE_MESA3D_OPENGL_EGL
 	select BR2_PACKAGE_MESA3D_OPENGL_GLX		if BR2_PACKAGE_XORG7
 	select BR2_PACKAGE_MESA3D_DEMOS			if BR2_PACKAGE_XORG7
 	select BR2_PACKAGE_LIBGLVND			if BR2_PACKAGE_XORG7
-
 
 config BR2_PACKAGE_BATOCERA_LIMA_MESA3D
 	bool "batocera.linux driver mesa LIMA"
 
 	select BR2_PACKAGE_MESA3D
+	select BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_LIMA
 	select BR2_PACKAGE_MESA3D_OPENGL_ES
 	select BR2_PACKAGE_MESA3D_OPENGL_EGL
-	select BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_LIMA
 
 config BR2_PACKAGE_BATOCERA_PANFROST_MESA3D
 	bool "batocera.linux driver mesa PANFROST"
 
 	select BR2_PACKAGE_MESA3D
+	select BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_PANFROST
 	select BR2_PACKAGE_MESA3D_OPENGL_ES
 	select BR2_PACKAGE_MESA3D_OPENGL_EGL
-	select BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_PANFROST
 	select BR2_PACKAGE_MESA3D_OPENGL_GLX		if BR2_PACKAGE_XORG7
 	select BR2_PACKAGE_MESA3D_DEMOS			if BR2_PACKAGE_XORG7
 	select BR2_PACKAGE_LIBGLVND			if BR2_PACKAGE_XORG7
@@ -1649,22 +1648,18 @@ config BR2_PACKAGE_BATOCERA_ASAHI_MESA3D
 	bool "batocera.linux driver mesa Asahi"
 
 	select BR2_PACKAGE_MESA3D
-	select BR2_PACKAGE_MESA3D_OPENGL_ES
-	select BR2_PACKAGE_MESA3D_OPENGL_EGL
-	select BR2_PACKAGE_MESA3D_OPENGL_GLX
 	select BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_ASAHI
 	select BR2_PACKAGE_MESA3D_OSMESA_GALLIUM
-	select BR2_PACKAGE_REGLINUX_SWAY
-	select BR2_PACKAGE_REGLINUX_XWAYLAND
-	select BR2_PACKAGE_LM_SENSORS
-	select BR2_PACKAGE_MESA3D_DEMOS
-	select BR2_PACKAGE_LIBGLVND
+	select BR2_PACKAGE_MESA3D_OPENGL_ES
+	select BR2_PACKAGE_MESA3D_OPENGL_EGL
+	select BR2_PACKAGE_MESA3D_OPENGL_GLX		if BR2_PACKAGE_XORG7
+	select BR2_PACKAGE_MESA3D_DEMOS			if BR2_PACKAGE_XORG7
+	select BR2_PACKAGE_LIBGLVND			if BR2_PACKAGE_XORG7
 
 config BR2_PACKAGE_BATOCERA_FREEDRENO_MESA3D
 	bool "batocera.linux driver mesa FREEDRENO"
 
 	select BR2_PACKAGE_MESA3D
-	select BR2_PACKAGE_MESA3D_GBM
 	select BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_FREEDRENO
 	select BR2_PACKAGE_MESA3D_OPENGL_ES
 	select BR2_PACKAGE_MESA3D_OPENGL_EGL
@@ -1676,10 +1671,9 @@ config BR2_PACKAGE_REGLINUX_ETNAVIV_MESA3D
 	bool "REG-Linux driver mesa ETNAVIV"
 
 	select BR2_PACKAGE_MESA3D
+	select BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_ETNAVIV
 	select BR2_PACKAGE_MESA3D_OPENGL_ES
 	select BR2_PACKAGE_MESA3D_OPENGL_EGL
-	select BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_ETNAVIV
-	select BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_KMSRO
 	select BR2_PACKAGE_HOST_PYTHON_PYCPARSER
 
 config BR2_PACKAGE_BATOCERA_LINUX_FIRMWARES
