--- a/board/batocera/qualcomm/sm8250/rp5/genimage.cfg
+++ b/board/batocera/qualcomm/sm8250/rp5/genimage.cfg
@@ -1,10 +1,10 @@
 image boot.vfat {
         vfat {
-                extraargs = "-F 32 -n BATOCERA"
+                extraargs = "-F 32 -n REGLINUX"
 		@files
         }
 
-        size = 6G
+        size = 2G
 }
 
 image userdata.ext4 {
@@ -17,7 +17,7 @@ image userdata.ext4 {
 	mountpoint = "/userdata"
 }
 
-image batocera.img {
+image reglinux.img {
 	hdimage {
 		align = "1M"
 	}
