--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -347,6 +347,7 @@ config BR2_PACKAGE_BATOCERA_SYSTEM
 						    BR2_PACKAGE_BATOCERA_TARGET_BCM2711	|| \
 						    BR2_PACKAGE_BATOCERA_TARGET_BCM2712	|| \
 						    BR2_PACKAGE_BATOCERA_TARGET_JH7110  || \
+						    BR2_PACKAGE_BATOCERA_TARGET_SM8250	|| \
 						    BR2_PACKAGE_BATOCERA_TARGET_K1
 
 	# wireless drivers
