--- a/board/batocera/qualcomm/sm8250/linux_sm8250-defconfig.config
+++ b/board/batocera/qualcomm/sm8250/linux_sm8250-defconfig.config
@@ -32,7 +32,7 @@ CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_INIT=""
-CONFIG_DEFAULT_HOSTNAME="BATOCERA"
+CONFIG_DEFAULT_HOSTNAME="REGLINUX"
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
 CONFIG_SYSVIPC_COMPAT=y
