Some sm8250 improvements

--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -285,7 +285,7 @@ config BR2_PACKAGE_BATOCERA_SYSTEM
 	select BR2_PACKAGE_MOKUTIL				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY # mokutil machine owner key utility
 
 	# Controllers
-	select BR2_PACKAGE_XONE					if !BR2_mipsel && !BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 && !BR2_PACKAGE_BATOCERA_TARGET_CHA && !BR2_PACKAGE_BATOCERA_TARGET_SM8250 # xbox receiver (require linux >= 4.15)
+	select BR2_PACKAGE_XONE					if !BR2_mipsel && !BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 && !BR2_PACKAGE_BATOCERA_TARGET_CHA # xbox receiver (require linux >= 4.15)
 	select BR2_PACKAGE_XPAD_NOONE				if !BR2_mipsel && !BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 && !BR2_PACKAGE_BATOCERA_TARGET_CHA # xbox receiver (require linux >= 4.15)
 	select BR2_PACKAGE_XPADNEO				if !BR2_mipsel && !BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 && !BR2_PACKAGE_BATOCERA_TARGET_CHA # xbox receiver (require linux >= 4.18)
 	select BR2_PACKAGE_WII_U_GC_ADAPTER			if !BR2_mipsel && !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_PACKAGE_BATOCERA_TARGET_RK3326 && !BR2_PACKAGE_BATOCERA_TARGET_CHA # wii-u-gc-adapter
@@ -359,7 +359,6 @@ config BR2_PACKAGE_BATOCERA_SYSTEM
 						   !BR2_PACKAGE_BATOCERA_TARGET_RK3326		&& \
 						   !BR2_PACKAGE_BATOCERA_TARGET_RK3588		&& \
 						   !BR2_PACKAGE_BATOCERA_TARGET_RK3128		&& \
-						   !BR2_PACKAGE_BATOCERA_TARGET_SM8250		&& \
 						   !BR2_PACKAGE_BATOCERA_TARGET_ODIN
 
 	select BR2_PACKAGE_RTL8821AU_MORROWNR	if BR2_PACKAGE_BATOCERA_TARGET_S922X || BR2_PACKAGE_BATOCERA_TARGET_A3GEN2 || BR2_PACKAGE_BATOCERA_TARGET_X86_ANY
@@ -960,12 +959,14 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 							    BR2_PACKAGE_BATOCERA_TARGET_BCM2711     || \
 							    BR2_PACKAGE_BATOCERA_TARGET_BCM2712     || \
 							    BR2_PACKAGE_BATOCERA_TARGET_RK3588      || \
+							    BR2_PACKAGE_BATOCERA_TARGET_SM8250      || \
 							    BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
 	select BR2_PACKAGE_DRASTIC			if BR2_PACKAGE_BATOCERA_TARGET_BCM2711	|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712	|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_S922X	|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_A3GEN2	|| \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8250	|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395	|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588	|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3568	|| \
@@ -1019,7 +1020,7 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 	select BR2_PACKAGE_LIBRETRO_ARDUOUS		# ALL
 
 	# Sony PS Vita
-	# Note: Vulkan crash on bcm2712, rk3588 not ready
+	# Note: Vulkan crash on bcm2712, rk3588 not ready, sm8250 to test
 	select BR2_PACKAGE_VITA3K			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
 
 	# MegaDuck
@@ -1107,6 +1108,7 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 	select BR2_PACKAGE_DHEWM3			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
 	# TyrQuake (Quake 1)
@@ -1263,6 +1265,7 @@ config BR2_PACKAGE_BATOCERA_COMPUTER_SYSTEMS
 	select BR2_PACKAGE_TSUGARU		if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
 						   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 						   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
+						   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
 						   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
 	# Macintosh
@@ -1297,6 +1300,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_S905GEN3		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3568		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588		|| \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8250		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_S922X		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_A3GEN2		|| \
@@ -1339,6 +1343,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	select BR2_PACKAGE_LIBRETRO_BEETLE_SATURN	if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY || \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712 || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588  || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8250  || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
 	select BR2_PACKAGE_LIBRETRO_KRONOS		if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY
@@ -1408,6 +1413,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_S922X	|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_A3GEN2	|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588   || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8250   || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
 	# Note: BigPEmu runs through box64 on non-x64 architectures until we have native binaries
@@ -1426,8 +1432,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   !BR2_PACKAGE_BATOCERA_TARGET_H5		&& \
 							   !BR2_PACKAGE_BATOCERA_TARGET_H616		&& \
 							   !BR2_PACKAGE_BATOCERA_TARGET_H6		&& \
-							   !BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA && \
-							   !BR2_PACKAGE_BATOCERA_TARGET_SM8250
+							   !BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 
 	# SNK Neo Geo AES / MVS
 	# Note: Accuracy-focused, beware of speed
@@ -1462,6 +1467,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_S922X   || \
 							   BR2_PACKAGE_BATOCERA_TARGET_A3GEN2  || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588  || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8250  || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
 
@@ -1490,6 +1496,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_A3GEN2		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2711		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712		|| \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8250		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT6395
 
 	# Super Nintendo / Super Famicom
@@ -1507,6 +1514,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2711		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588		|| \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8250		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_S922X		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_A3GEN2
@@ -1516,6 +1524,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_S922X		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588		|| \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8250		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3399		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_A3GEN2
