Switch to 24.11-dev series, next step is branching for release prep

--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -897,7 +897,7 @@ config BR2_PACKAGE_BATOCERA_ARCADE_SYSTEMS
 	select BR2_PACKAGE_MODEL2EMU		if BR2_PACKAGE_BATOCERA_WINE
 
 	# Standalone Sega Model 3 emulator
-	select BR2_PACKAGE_SUPERMODEL		if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
+	select BR2_PACKAGE_SUPERMODEL		if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || BR2_PACKAGE_BATOCERA_TARGET_SM8250
 	select BR2_PACKAGE_SUPERMODEL_LEGACY	if BR2_PACKAGE_REGLINUX_XWAYLAND && !BR2_PACKAGE_SUPERMODEL
 
 	# RetroArch MAME derivatives (old cores)
