SM8250: kernel config - Allow the kernel to trigger a system transition into a global sleep state   automatically whenever there are no active wakeup sources.

--- a/board/batocera/qualcomm/sm8250/linux_sm8250-defconfig.config
+++ b/board/batocera/qualcomm/sm8250/linux_sm8250-defconfig.config
@@ -558,12 +558,12 @@ CONFIG_HIBERNATION_SNAPSHOT_DEV=y
 CONFIG_HIBERNATION_COMP_LZO=y
 CONFIG_HIBERNATION_DEF_COMP="lzo"
 CONFIG_PM_STD_PARTITION=""
+CONFIG_PM=y
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
-# CONFIG_PM_AUTOSLEEP is not set
+CONFIG_PM_AUTOSLEEP=y
 # CONFIG_PM_USERSPACE_AUTOSLEEP is not set
 # CONFIG_PM_WAKELOCKS is not set
-CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
 CONFIG_PM_CLK=y
 CONFIG_PM_GENERIC_DOMAINS=y
