--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -20,7 +20,7 @@ shared:
         "Balanced":         balanced
         "Power Saver":      powersaver
     tdp:
-      archs_include: [x86_64]
+      archs_include: [x86, x86_64, x86_64_v3]
       group: POWER OPTIONS
       prompt: RYZEN THERMAL DESIGN POWER
       description: Adjust the percentage of power (watts) provided to a Ryzen Mobile Series CPU based on it's default max value. Caution, setting wattage too high could damage your device.
@@ -6948,7 +6948,7 @@ lime3ds:
                 "9x (3600x2160)":  9
                 "10x (4000x2400)": 10
         lime3ds_graphics_api:
-            archs_include: [x86, x86_64]
+            archs_include: [x86, x86_64, x86_64_v3, bcm2711, bcm2712, sm8250, sd845]
             submenu: GRAPHICS
             prompt: GRAPHICS API
             description: Choose which graphics API library to use.
@@ -7032,7 +7032,7 @@ citra:
                 "9x (3600x2160)":  9
                 "10x (4000x2400)": 10
         citra_graphics_api:
-            archs_include: [x86, x86_64]
+            archs_include: [x86, x86_64, x86_64_v3, bcm2711, bcm2712, sm8250, sd845]
             submenu: GRAPHICS
             prompt: GRAPHICS API
             description: Choose which graphics API library to use.
@@ -7089,7 +7089,7 @@ hypseus-singe:
   shared: [powermode, tdp, videomode, use_guns]
   cfeatures:
         hypseus_api:
-            archs_include: [x86, x86_64, bcm2711, bcm2712]
+            archs_include: [x86, x86_64, x86_64_v3, bcm2711, bcm2712, sm8250, sd845]
             prompt: GRAPHICS API
             description: Choose which graphics API library to use. Vulkan may not work on all hardware.
             choices:
@@ -7116,7 +7116,7 @@ hypseus-singe:
             prompt: SMOOTH GAMES (BILINEAR FILTERING)
             preset: switchoff
         hypseus_scanlines:
-            archs_include: [x86, x86_64]
+            archs_include: [x86, x86_64, x86_64_v3, bcm2711, bcm2712, sm8250, sd845]
             group: ADVANCED OPTIONS
             prompt: SCANLINES
             choices:
@@ -7198,7 +7198,7 @@ dolphin:
             description: Fix screen tearing. CPU heavy.
             preset: switchon
         gfxbackend:
-            archs_include: [x86, x86_64, bcm2711, bcm2712]
+            archs_include: [x86, x86_64, x86_64_v3, bcm2711, bcm2712, sm8250, sd845]
             submenu: RENDERING
             prompt:  GRAPHICS API
             description: Choose which graphics API library to use.
@@ -7754,7 +7754,7 @@ duckstation:
                 "Enabled":            "true"
         duckstation_gfxbackend:
             submenu: DISPLAY
-            archs_include: [x86, x86_64, bcm2711, bcm2712]
+            archs_include: [x86, x86_64, x86_64_v3, bcm2711, bcm2712, sm8250, sd845]
             prompt: GRAPHICS API
             description: Choose which graphics API library to use.
             choices:
@@ -8938,7 +8938,7 @@ ppsspp:
   shared: [powermode, tdp, videomode, ratio, bezel, bezel_stretch, hud, hud_corner, bezel.tattoo, bezel.tattoo_corner, bezel.tattoo_file, bezel.resize_tattoo, rewind]
   cfeatures:
         gfxbackend:
-            archs_include: [x86, x86_64, bcm2711, bcm2712]
+            archs_include: [x86, x86_64, x86_64_v3, bcm2711, bcm2712, sm8250, sd845]
             prompt: GRAPHICS API
             description: Choose which graphics API library to use.
             choices:
@@ -9665,7 +9665,7 @@ mame:
                 "Off (Default)": 0
                 "On":            1
         bgfxbackend:
-            archs_include: [x86, x86_64, bcm2711, bcm2712]
+            archs_include: [x86, x86_64, x86_64_v3, bcm2711, bcm2712, sm8250, sd845]
             prompt:      BGFX GRAPHICS API
             description: Depends on video mode being set to BGFX.
             choices:
