Update some boot labels still named batocera

--- a/board/batocera/fsoverlay/etc/samba/smb.conf
+++ b/board/batocera/fsoverlay/etc/samba/smb.conf
@@ -343,7 +343,7 @@ socket options = TCP_NODELAY
 ;   postexec = /bin/umount /cdrom
 
 [share]
-comment = batocera.linux user data
+comment = reg.linux user data
 path = /userdata
 writeable = yes
 guest ok = yes
