WIP new saphira build

--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -897,7 +897,7 @@ config BR2_PACKAGE_BATOCERA_ARCADE_SYSTEMS
 	select BR2_PACKAGE_MODEL2EMU		if BR2_PACKAGE_BATOCERA_WINE
 
 	# Standalone Sega Model 3 emulator
-	select BR2_PACKAGE_SUPERMODEL		if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || BR2_PACKAGE_BATOCERA_TARGET_SM8250
+	select BR2_PACKAGE_SUPERMODEL		if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || BR2_PACKAGE_BATOCERA_TARGET_SM8250 || BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 	select BR2_PACKAGE_SUPERMODEL_LEGACY	if BR2_PACKAGE_REGLINUX_XWAYLAND && !BR2_PACKAGE_SUPERMODEL
 
 	# RetroArch MAME derivatives (old cores)
@@ -960,6 +960,7 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 							    BR2_PACKAGE_BATOCERA_TARGET_BCM2712     || \
 							    BR2_PACKAGE_BATOCERA_TARGET_RK3588      || \
 							    BR2_PACKAGE_BATOCERA_TARGET_SM8250      || \
+							    BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA     || \
 							    BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
 	select BR2_PACKAGE_DRASTIC			if BR2_PACKAGE_BATOCERA_TARGET_BCM2711	|| \
@@ -983,6 +984,7 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
 	select BR2_PACKAGE_CITRA			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
@@ -990,6 +992,7 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
 	# PSP
@@ -1021,7 +1024,7 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 
 	# Sony PS Vita
 	# Note: Vulkan crash on bcm2712, rk3588 not ready, sm8250 to test
-	select BR2_PACKAGE_VITA3K			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
+	select BR2_PACKAGE_VITA3K			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 
 	# MegaDuck
 	select BR2_PACKAGE_LIBRETRO_SAMEDUCK		# ALL
@@ -1109,6 +1112,7 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
 	# TyrQuake (Quake 1)
@@ -1266,6 +1270,7 @@ config BR2_PACKAGE_BATOCERA_COMPUTER_SYSTEMS
 						   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 						   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 						   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+						   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 						   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
 	# Macintosh
@@ -1301,6 +1306,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3568		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250		|| \
+							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_S922X		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_A3GEN2		|| \
@@ -1344,6 +1350,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712 || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588  || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250  || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
 	select BR2_PACKAGE_LIBRETRO_KRONOS		if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY
@@ -1355,6 +1362,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	select BR2_PACKAGE_DOLPHIN_EMU			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2711    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
@@ -1369,7 +1377,9 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	select BR2_PACKAGE_DOLPHIN_TRIFORCE		if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
 
 	# Microsoft XBOX
-	select BR2_PACKAGE_XEMU				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || BR2_PACKAGE_BATOCERA_TARGET_SM8250
+	select BR2_PACKAGE_XEMU				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_SAPHIRA
 
 	# Microsoft Xbox 360
 	select BR2_PACKAGE_XENIA			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY && BR2_PACKAGE_BATOCERA_WINE_SYSTEMS
@@ -1414,6 +1424,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_A3GEN2	|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588   || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250   || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA  || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
 	# Note: BigPEmu runs through box64 on non-x64 architectures until we have native binaries
@@ -1468,6 +1479,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_A3GEN2  || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588  || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250  || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
 
@@ -1497,6 +1509,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2711		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250		|| \
+							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT6395
 
 	# Super Nintendo / Super Famicom
@@ -1515,6 +1528,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250		|| \
+							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_S922X		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_A3GEN2
@@ -1525,6 +1539,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250		|| \
+							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3399		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_A3GEN2
