--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -1024,7 +1024,7 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 
 	# Sony PS Vita
 	# Note: Vulkan crash on bcm2712, rk3588 not ready, sm8250 to test
-	select BR2_PACKAGE_VITA3K			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
+	select BR2_PACKAGE_VITA3K			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA || BR2_PACKAGE_BATOCERA_TARGET_SM8250
 
 	# MegaDuck
 	select BR2_PACKAGE_LIBRETRO_SAMEDUCK		# ALL
