Enable SMB_SERVER everywhere with same options

--- a/board/batocera/rockchip/rk3588/linux-defconfig.config
+++ b/board/batocera/rockchip/rk3588/linux-defconfig.config
@@ -8550,6 +8550,7 @@ CONFIG_CIFS_DFS_UPCALL=y
 CONFIG_SMB_SERVER=y
 CONFIG_SMB_SERVER_CHECK_CAP_NET_ADMIN=y
 # CONFIG_SMB_SERVER_KERBEROS5 is not set
+# CONFIG_SMB_SERVER_SMBDIRECT is not set
 CONFIG_SMBFS=y
 # CONFIG_CODA_FS is not set
 # CONFIG_AFS_FS is not set
