--- a/board/batocera/amlogic/s812/linux-defconfig.config
+++ b/board/batocera/amlogic/s812/linux-defconfig.config
@@ -5419,10 +5419,11 @@ CONFIG_CIFS_DFS_UPCALL=y
 # CONFIG_CIFS_SWN_UPCALL is not set
 CONFIG_CIFS_FSCACHE=y
 # CONFIG_CIFS_ROOT is not set
-CONFIG_SMB_SERVER=m
+CONFIG_SMB_SERVER=y
 CONFIG_SMB_SERVER_CHECK_CAP_NET_ADMIN=y
-CONFIG_SMB_SERVER_KERBEROS5=n
-CONFIG_SMBFS_COMMON=y
+# CONFIG_SMB_SERVER_KERBEROS5 is not set
+# CONFIG_SMB_SERVER_SMBDIRECT is not set
+CONFIG_SMBFS=y
 # CONFIG_CODA_FS is not set
 # CONFIG_AFS_FS is not set
 CONFIG_NLS=y
