--- a/board/batocera/rockchip/rk3326/linux-defconfig.config
+++ b/board/batocera/rockchip/rk3326/linux-defconfig.config
@@ -5788,9 +5788,10 @@ CONFIG_CIFS_ALLOW_INSECURE_LEGACY=y
 # CONFIG_CIFS_DFS_UPCALL is not set
 # CONFIG_CIFS_SWN_UPCALL is not set
 # CONFIG_CIFS_ROOT is not set
-CONFIG_SMB_SERVER=m
+CONFIG_SMB_SERVER=y
 CONFIG_SMB_SERVER_CHECK_CAP_NET_ADMIN=y
 # CONFIG_SMB_SERVER_KERBEROS5 is not set
+# CONFIG_SMB_SERVER_SMBDIRECT is not set
 CONFIG_SMBFS=y
 # CONFIG_CODA_FS is not set
 # CONFIG_AFS_FS is not set
