--- a/board/batocera/saphira/linux-defconfig.config
+++ b/board/batocera/saphira/linux-defconfig.config
@@ -6711,8 +6711,11 @@ CONFIG_CIFS_DEBUG=y
 CONFIG_CIFS_DFS_UPCALL=y
 # CONFIG_CIFS_SWN_UPCALL is not set
 CONFIG_CIFS_FSCACHE=y
-CONFIG_SMB_SERVER=m
-CONFIG_SMBFS=m
+CONFIG_SMB_SERVER=y
+CONFIG_SMB_SERVER_CHECK_CAP_NET_ADMIN=y
+# CONFIG_SMB_SERVER_KERBEROS5 is not set
+# CONFIG_SMB_SERVER_SMBDIRECT is not set
+CONFIG_SMBFS=y
 CONFIG_CODA_FS=m
 # CONFIG_AFS_FS is not set
 CONFIG_NLS=y
