--- a/board/batocera/starfive/jh7110/linux-defconfig.config
+++ b/board/batocera/starfive/jh7110/linux-defconfig.config
@@ -7548,10 +7548,11 @@ CONFIG_CIFS_POSIX=y
 CONFIG_CIFS_DFS_UPCALL=y
 # CONFIG_CIFS_SWN_UPCALL is not set
 CONFIG_CIFS_FSCACHE=y
-CONFIG_SMB_SERVER=m
+CONFIG_SMB_SERVER=y
 CONFIG_SMB_SERVER_CHECK_CAP_NET_ADMIN=y
 # CONFIG_SMB_SERVER_KERBEROS5 is not set
-CONFIG_SMBFS=m
+# CONFIG_SMB_SERVER_SMBDIRECT is not set
+CONFIG_SMBFS=y
 # CONFIG_CODA_FS is not set
 # CONFIG_AFS_FS is not set
 # CONFIG_9P_FS is not set
