--- a/board/batocera/x86/linux_x86_64-defconfig.config
+++ b/board/batocera/x86/linux_x86_64-defconfig.config
@@ -9443,11 +9443,11 @@ CONFIG_CIFS_DEBUG=y
 CONFIG_CIFS_DFS_UPCALL=y
 # CONFIG_CIFS_SWN_UPCALL is not set
 # CONFIG_CIFS_SMB_DIRECT is not set
-CONFIG_SMB_SERVER=m
-# CONFIG_SMB_SERVER_SMBDIRECT is not set
+CONFIG_SMB_SERVER=y
 CONFIG_SMB_SERVER_CHECK_CAP_NET_ADMIN=y
 # CONFIG_SMB_SERVER_KERBEROS5 is not set
-CONFIG_SMBFS=m
+# CONFIG_SMB_SERVER_SMBDIRECT is not set
+CONFIG_SMBFS=y
 CONFIG_CODA_FS=m
 # CONFIG_AFS_FS is not set
 CONFIG_NLS=y
