SM8250: Enable MIDI driver  - Needed by PC-FX core

--- a/board/batocera/qualcomm/sm8250/linux_sm8250-defconfig.config
+++ b/board/batocera/qualcomm/sm8250/linux_sm8250-defconfig.config
@@ -6143,6 +6143,7 @@ CONFIG_SND_JACK_INPUT_DEV=y
 # CONFIG_SND_OSSEMUL is not set
 CONFIG_SND_PCM_TIMER=y
 # CONFIG_SND_HRTIMER is not set
+CONFIG_SND_SEQ_DEVICE=y
 CONFIG_SND_DYNAMIC_MINORS=y
 CONFIG_SND_MAX_CARDS=32
 CONFIG_SND_SUPPORT_OLD_API=y
@@ -6153,7 +6154,7 @@ CONFIG_SND_CTL_FAST_LOOKUP=y
 # CONFIG_SND_DEBUG is not set
 # CONFIG_SND_CTL_INPUT_VALIDATION is not set
 CONFIG_SND_VMASTER=y
-# CONFIG_SND_SEQUENCER is not set
+CONFIG_SND_SEQUENCER=y
 CONFIG_SND_DRIVERS=y
 # CONFIG_SND_DUMMY is not set
 CONFIG_SND_ALOOP=m
