--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -1353,7 +1353,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
-	select BR2_PACKAGE_LIBRETRO_KRONOS		if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY
+	select BR2_PACKAGE_LIBRETRO_KRONOS		if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY || BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 
 	select BR2_PACKAGE_LIBRETRO_YABASANSHIRO	if !BR2_RISCV_64 && \
 							(BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || BR2_PACKAGE_BATOCERA_GLES3)
@@ -1387,11 +1387,11 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 
 	# Sony PS2
 	select BR2_PACKAGE_PCSX2			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
-	select BR2_PACKAGE_PLAY				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY # Too slow on ARM systems
-	select BR2_PACKAGE_LIBRETRO_PLAY		if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY # Too slow on ARM systems
+	select BR2_PACKAGE_PLAY				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA # Too slow on ARM systems
+	select BR2_PACKAGE_LIBRETRO_PLAY		if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA # Too slow on ARM systems
 
 	# Sony PS3
-	select BR2_PACKAGE_RPCS3			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
+	select BR2_PACKAGE_RPCS3			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 
 	# Wii U
 	select BR2_PACKAGE_CEMU				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
@@ -1442,8 +1442,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   !BR2_PACKAGE_BATOCERA_TARGET_S905		&& \
 							   !BR2_PACKAGE_BATOCERA_TARGET_H5		&& \
 							   !BR2_PACKAGE_BATOCERA_TARGET_H616		&& \
-							   !BR2_PACKAGE_BATOCERA_TARGET_H6		&& \
-							   !BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
+							   !BR2_PACKAGE_BATOCERA_TARGET_H6
 
 	# SNK Neo Geo AES / MVS
 	# Note: Accuracy-focused, beware of speed
@@ -1458,7 +1457,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	# Sega 8-bit/16-range (Mark III / Master System, Game Gear, Genesis / Megadrive, SegaCD / MegaCD, 32X)
 	select BR2_PACKAGE_LIBRETRO_PICODRIVE		# ALL
 	select BR2_PACKAGE_LIBRETRO_GENESISPLUSGX	# ALL
-	select BR2_PACKAGE_LIBRETRO_GENESISPLUSGX_WIDE	if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY
+	select BR2_PACKAGE_LIBRETRO_GENESISPLUSGX_WIDE	if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY || BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 	select BR2_PACKAGE_LIBRETRO_BLASTEM		if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY
 	select BR2_PACKAGE_LIBRETRO_SMSPLUS_GX		# ALL
 	select BR2_PACKAGE_LIBRETRO_GEARSYSTEM		# ALL
@@ -1533,7 +1532,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_S922X		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_A3GEN2
 
-	select BR2_PACKAGE_LIBRETRO_BSNES_HD            if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
+	select BR2_PACKAGE_LIBRETRO_BSNES_HD            if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 	select BR2_PACKAGE_LIBRETRO_MESENS              if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY	|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_S922X		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712		|| \
