Fix RetroArch desktop GL vs GLES + some sm8250 enablement

--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -1353,7 +1353,9 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
-	select BR2_PACKAGE_LIBRETRO_KRONOS		if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY || BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
+	select BR2_PACKAGE_LIBRETRO_KRONOS		if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8250  || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 
 	select BR2_PACKAGE_LIBRETRO_YABASANSHIRO	if !BR2_RISCV_64 && \
 							(BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || BR2_PACKAGE_BATOCERA_GLES3)
@@ -1387,11 +1389,17 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 
 	# Sony PS2
 	select BR2_PACKAGE_PCSX2			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
-	select BR2_PACKAGE_PLAY				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA # Too slow on ARM systems
-	select BR2_PACKAGE_LIBRETRO_PLAY		if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA # Too slow on ARM systems
+	select BR2_PACKAGE_PLAY				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
+                                                           BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
+	select BR2_PACKAGE_LIBRETRO_PLAY		if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
+                                                           BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 
 	# Sony PS3
-	select BR2_PACKAGE_RPCS3			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
+	select BR2_PACKAGE_RPCS3			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 
 	# Wii U
 	select BR2_PACKAGE_CEMU				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
