Enable RPCS3 + Vita3K on rpi5

--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -1024,7 +1024,10 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 
 	# Sony PS Vita
 	# Note: Vulkan crash on bcm2712, rk3588 not ready, sm8250 to test
-	select BR2_PACKAGE_VITA3K			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA || BR2_PACKAGE_BATOCERA_TARGET_SM8250
+	select BR2_PACKAGE_VITA3K			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712
 
 	# MegaDuck
 	select BR2_PACKAGE_LIBRETRO_SAMEDUCK		# ALL
@@ -1381,7 +1384,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	# Microsoft XBOX
 	select BR2_PACKAGE_XEMU				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
-							   BR2_PACKAGE_BATOCERA_SAPHIRA
+							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 
 	# Microsoft Xbox 360
 	select BR2_PACKAGE_XENIA			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY && BR2_PACKAGE_BATOCERA_WINE_SYSTEMS
@@ -1398,6 +1401,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 
 	# Sony PS3
 	select BR2_PACKAGE_RPCS3			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
+							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 
