RK3568 bump kernel to 6.12

--- a/board/batocera/rockchip/rk3568/linux-defconfig.config
+++ b/board/batocera/rockchip/rk3568/linux-defconfig.config
@@ -7242,7 +7242,7 @@ CONFIG_AD9834=m
 # end of Resolver to digital converters
 # end of IIO staging drivers
 
-CONFIG_FB_SM750=m
+# CONFIG_FB_SM750 is not set
 CONFIG_STAGING_MEDIA=y
 # CONFIG_DVB_AV7110 is not set
 CONFIG_VIDEO_MAX96712=m
