--- a/board/batocera/rockchip/rk3568/firefly-station-p2/boot/extlinux.conf
+++ b/board/batocera/rockchip/rk3568/firefly-station-p2/boot/extlinux.conf
@@ -1,4 +1,4 @@
 LABEL reg.linux
 LINUX /boot/linux
-FDT /boot/rk3568-firefly-roc-pc.dtb
+FDT /boot/rk3568-roc-pc.dtb
 APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyS2,1500000n8
