Enable zink for all vulkan targets + lavapipe for x86 debug

--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -149,8 +149,12 @@ config BR2_PACKAGE_REGLINUX_VULKAN
 	select BR2_PACKAGE_MESA3D_VULKAN_DRIVER_BROADCOM	if BR2_PACKAGE_BATOCERA_TARGET_BCM2711 || BR2_PACKAGE_BATOCERA_TARGET_BCM2712
 	select BR2_PACKAGE_MESA3D_VULKAN_DRIVER_PANFROST	if BR2_PACKAGE_BATOCERA_PANFROST_MESA3D
 	select BR2_PACKAGE_MESA3D_VULKAN_DRIVER_FREEDRENO	if BR2_PACKAGE_BATOCERA_FREEDRENO_MESA3D
+
+	# Zink for OpenGL on-the-top of Vulkan
+	select BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_ZINK
+
 	# for debug purposes
-	# select BR2_PACKAGE_MESA3D_VULKAN_DRIVER_LAVAPIPE	if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY
+	select BR2_PACKAGE_MESA3D_VULKAN_DRIVER_LAVAPIPE	if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY
 
 	# Vulkan samples
 	select BR2_PACKAGE_VULKAN_SAMPLES			if BR2_PACKAGE_BATOCERA_DEBUG
