Cleanup samba *.conf and avoid asking credentials
- sync ksmbd.conf and smb.conf settings
- remove duplicated or unsupported settings
- do not ask user/password to Windows users

--- a/board/batocera/fsoverlay/etc/ksmbd/smb.conf
+++ b/board/batocera/fsoverlay/etc/ksmbd/smb.conf
@@ -10,16 +10,18 @@
 ;******************************************************************************
 
 [global]
-netbios name = REGLINUX
+	guest account = root
+	map to guest = Bad User
+	netbios name = REGLINUX
+	security = user
 
 
 [share]
-comment = REG-Linux user data
-path = /userdata
-writeable = yes
-guest ok = yes
-create mask = 0644
-directory mask = 0755
-force user = root
-veto files = /._*/.DS_Store/
-delete veto files = yes
+	comment = REG-Linux user data
+	path = /userdata
+	browseable = yes
+	create mask = 0644
+	directory mask = 0755
+	force user = root
+	guest ok = yes
+	read only = no
