--- a/board/batocera/fsoverlay/etc/ksmbd/ksmbd.conf
+++ b/board/batocera/fsoverlay/etc/ksmbd/ksmbd.conf
@@ -1,22 +1,18 @@
 ; see ksmbd.conf(5) for details
 
-[REGLINUX]
-	; share parameters
-	security = user
-	browseable = yes
-	comment = REGLINUX share data
-	create mask = 0777
-	directory mask = 0775
-	force user = root
-        guest account = root
-	guest ok = yes
-	guest only = yes
+[global]
+	; global parameters
+	guest account = root
+	map to guest = bad user
 	netbios name = REGLINUX
+
+[share]
+	; share parameters
+	comment = REG-Linux user data
 	path = /userdata
+	browseable = yes
+	create mask = 0644
+	directory mask = 0755
+	force user = root
+	guest ok = yes
 	read only = no
-	store dos attributes = yes
-	writable = yes
-	write ok = yes
-	writeable = yes
-	restrict anonymous = 0
-	bind interfaces only = no
