WIP Panda3DS (builds okay on x86_64 and aarch64/gles3). Missing Vulkan, configgen, evmapy

--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -151,7 +151,7 @@ config BR2_PACKAGE_REGLINUX_VULKAN
 	select BR2_PACKAGE_MESA3D_VULKAN_DRIVER_FREEDRENO	if BR2_PACKAGE_BATOCERA_FREEDRENO_MESA3D
 
 	# Zink for OpenGL on-the-top of Vulkan
-	select BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_ZINK
+	select BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_ZINK		if BR2_PACKAGE_MESA3D
 
 	# for debug purposes
 	select BR2_PACKAGE_MESA3D_VULKAN_DRIVER_LAVAPIPE	if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY
@@ -998,6 +998,9 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
+
+	select BR2_PACKAGE_PANDA3DS			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
+							   (BR2_aarch64 && BR2_PACKAGE_BATOCERA_GLES3)
 
 	# PSP
 	# Note: JZ4770 compiles and links fine, just too slow
