--- a/package/reglinux/emulators/panda3ds/Config.in
+++ b/package/reglinux/emulators/panda3ds/Config.in
@@ -1,6 +1,7 @@
 config BR2_PACKAGE_PANDA3DS
     bool "panda3ds"
     select BR2_PACKAGE_SDL2
+    select BR2_PACKAGE_GLSLANG	if BR2_PACKAGE_REGLINUX_VULKAN
 
     help
       Panda3DS is an HLE, red-panda-themed Nintendo 3DS emulator written in C++ which started out as a fun project out of curiosity, but evolved into something that can sort of play games!
