Citron,remove Sudachi

--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
@@ -601,8 +601,8 @@ supervision:
   emulator: libretro
   core:     potator
 switch:
-  emulator: sudachi
-  core:     sudachi
+  emulator: citron
+  core:     citron
   options:
     hud_support: false
 systemsp:
