--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -1381,8 +1381,11 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 
 	select BR2_PACKAGE_LIBRETRO_DOLPHIN		if BR2_PACKAGE_BATOCERA_TARGET_A3GEN2 || BR2_PACKAGE_BATOCERA_TARGET_S9GEN4
 
-	# Nintendo Switch (let's disable for now...)
-	#select BR2_PACKAGE_SUDACHI			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
+	# Nintendo Switch
+	select BR2_PACKAGE_CITRON			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712
 	#select BR2_PACKAGE_RYUJINX			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
 
 	# Triforce
