--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -11470,11 +11470,11 @@ steam:
   features: [padtokeyboard]
   shared: [powermode, tdp, videomode]
 
-sudachi:
+citron:
   features: [padtokeyboard]
   shared: [powermode, tdp, videomode, bezel, bezel_stretch, hud, hud_corner, bezel.tattoo, bezel.tattoo_corner, bezel.tattoo_file, bezel.resize_tattoo]
   cfeatures:
-        sudachi_scale:
+        citron_scale:
           submenu: VIDEO
           prompt: RENDERING RESOLUTION
           description: Enhancement. Increase the rendering resolution. Makes 3D objects clearer.
@@ -11490,7 +11490,7 @@ sudachi:
             "6x (4320p/6480p)":                  8
             "7x (5040p/7560p)":                  9
             "8x (5760p/8640p)":                  10
-        sudachi_ratio:
+        citron_ratio:
           submenu: VIDEO
           prompt: ASPECT RATIO
           description: Change the output resolution ratio.
@@ -11501,14 +11501,14 @@ sudachi:
             "Force 16:10":       3
             "Force 32:9":        4
             "Stretch to window": 5
-        sudachi_backend:
+        citron_backend:
           submenu: RENDERING
           prompt: GRAPHICS API
           description: Choose which graphics API library to use.
           choices:
             "OpenGL": 0
             "Vulkan": 1
-        sudachi_anisotropy:
+        citron_anisotropy:
           submenu: RENDERING
           prompt: ANISOTROPIC FILTERING
           description: Improves clarity of distant textures.
@@ -11518,7 +11518,7 @@ sudachi:
             "4x":      3
             "8x":      4
             "16x":     5
-        sudachi_vsync:
+        citron_vsync:
           submenu: RENDERING
           prompt: VSYNC
           description: Fix screen tearing. FIFO (Vsync) does not drop frames. FIFO Relaxed allows tearing as it recovers from a slow down. Mailbox can have lower latency but may drop frames.
@@ -11527,14 +11527,14 @@ sudachi:
             "Mailbox (Recommended)": 1
             "FIFO (VSync On)":       2
             "FIFO Relaxed":          3
-        sudachi_async_shaders:
+        citron_async_shaders:
           submenu: RENDERING
           prompt: ASYNC SHADER COMPILE
           description: Speed up shader compilation.
           choices:
             "Disabled": "false"
             "Enabled":  "true"
-        sudachi_aliasing_method:
+        citron_aliasing_method:
           submenu: RENDERING
           prompt: ANTI-ALIASING METHOD
           description: FXAA has a lower performance impact, goof for low resolutions. SMAA offers best quality.
@@ -11542,7 +11542,7 @@ sudachi:
             "None": 0
             "FXAA": 1
             "SMAA": 2
-        sudachi_scale_filter:
+        citron_scale_filter:
           submenu: RENDERING
           prompt: TEXTURE FILTERING
           description: Smooth textures on 3D objects.
@@ -11553,7 +11553,7 @@ sudachi:
             "Gaussian":                        3
             "ScaleForce":                      4
             "AMD FidelityFX Super Resolution": 5
-        sudachi_accuracy:
+        citron_accuracy:
           submenu: RENDERING
           prompt: ACCURACY LEVEL
           description: GPU emulation accuracy. Most games render fine with Normal. High is required to ensure particles render correctly.
@@ -11561,19 +11561,19 @@ sudachi:
             "Normal":  0
             "High":    1
             "Extreme": 2
-        sudachi_sound_mode:
+        citron_sound_mode:
           prompt: CHOOSE SOUND OUTPUT MODE
           choices:
             "Mono":     0
             "Stereo":   1
             "Surround": 2
-        sudachi_dock_mode:
+        citron_dock_mode:
           prompt: DOCK MODE
           description: Choose whether the virtual switch is docked or not.
           choices:
             "Undocked":         "false"
             "Docked (Default)": "true"
-        sudachi_language:
+        citron_language:
           prompt: LANGUAGE
           description: Change the game's language.
           choices:
@@ -11595,7 +11595,7 @@ sudachi:
             "Simplified Chinese":     15
             "Traditional Chinese":    16
             "Brazilian Portuguese":   17
-        sudachi_region:
+        citron_region:
           prompt: CHOOSE CONSOLE REGION
           description: Choose your console region.
           choices:
@@ -11606,7 +11606,7 @@ sudachi:
             "China":     4
             "Korea":     5
             "Taiwan":    6
-        sudachi_timezone:
+        citron_timezone:
           prompt: CHOOSE CONSOLE TIMEZONE
           description: Choose your console timezone.
           choices:
