--- a/package/reglinux/emulators/citron/Config.in
+++ b/package/reglinux/emulators/citron/Config.in
@@ -1,5 +1,5 @@
-config BR2_PACKAGE_SUDACHI
-    bool "sudachi"
+config BR2_PACKAGE_CITRON
+    bool "citron"
     depends on BR2_x86_64 || BR2_aarch64
     depends on BR2_PACKAGE_XORG7
     select BR2_PACKAGE_JSON_FOR_MODERN_CPP
@@ -15,7 +15,8 @@ config BR2_PACKAGE_SUDACHI
     select BR2_PACKAGE_LZ4
     select BR2_PACKAGE_CATCH2
     select BR2_PACKAGE_OPUS
+    select BR2_PACKAGE_ENET
     help
-      A familiar, open source, and powerful Nintendo Switch emulator.
+      Citron: Nintendo Switch Homebrew Emulator
 
-	    https://github.com/sudachi-emu/sudachi
+	    https://citron-emu.org/
