--- a/board/batocera/qualcomm/sm8250/rp5/grub.cfg
+++ b/board/batocera/qualcomm/sm8250/rp5/grub.cfg
@@ -2,7 +2,7 @@ set default="0"
 set timeout="0"
 
 menuentry "Reglinux" {
-    linux /boot/Image label=REGLINUX rootwait console=ttyMSM0,115200n8 clk_ignore_unused pd_ignore_unused quiet
+    linux /boot/Image label=REGLINUX rootwait fbcon=rotate:3 console=ttyMSM0,115200n8 clk_ignore_unused pd_ignore_unused quiet
     initrd /boot/initrd.lz4
     devicetree /boot/sm8250-retroidpocket-rp5.dtb
 }
