Rationalize lr-beetle-pce/lr-beetle-pce-fast, same for lr-stella, lr-stella2014 and adjust configs

--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-a3gen2.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-a3gen2.yml
@@ -1,3 +1,9 @@
+pcengine:
+  emulator: libretro
+  core:     pce
+pcenginecd:
+  emulator: libretro
+  core:     pce
 gamecube:
   emulator: libretro
   core:     dolphin
