--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-bcm2711.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-bcm2711.yml
@@ -2,6 +2,12 @@ default:
   options:
     hud_support: true
 
+pcengine:
+  emulator: libretro
+  core:     pce
+pcenginecd:
+  emulator: libretro
+  core:     pce
 nds:
   emulator: drastic
   core:     drastic
