--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-s922x.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-s922x.yml
@@ -1,3 +1,9 @@
+pcengine:
+  emulator: libretro
+  core:     pce
+pcenginecd:
+  emulator: libretro
+  core:     pce
 model3:
   emulator: supermodel
   core:     supermodel-legacy
