--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -344,7 +344,7 @@ config BR2_PACKAGE_BATOCERA_SYSTEM
 	select BR2_PACKAGE_BATOCERA_MUSIC_SUPPORT
 
 	# Feral GameMode
-	# not yet select BR2_PACKAGE_GAMEMODE		# ALL
+	select BR2_PACKAGE_GAMEMODE		# ALL
 
 	# Vulkan-enabled targets
 	select BR2_PACKAGE_REGLINUX_VULKAN	if  BR2_PACKAGE_BATOCERA_TARGET_X86_ANY || \
@@ -1485,9 +1485,9 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	select BR2_PACKAGE_LIBRETRO_GEARSYSTEM		# ALL
 
 	# Atari 2600
-	select BR2_PACKAGE_STELLA			if !BR2_PACKAGE_BATOCERA_TARGET_BCM2835
-	select BR2_PACKAGE_LIBRETRO_STELLA		if !BR2_PACKAGE_BATOCERA_TARGET_BCM2835
-	select BR2_PACKAGE_LIBRETRO_STELLA2014		if BR2_PACKAGE_BATOCERA_TARGET_BCM2835 || BR2_PACKAGE_BATOCERA_TARGET_JZ4770
+	select BR2_PACKAGE_STELLA			if !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_PACKAGE_BATOCERA_TARGET_JZ4770
+	select BR2_PACKAGE_LIBRETRO_STELLA		if !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_PACKAGE_BATOCERA_TARGET_JZ4770
+	select BR2_PACKAGE_LIBRETRO_STELLA2014		if !BR2_PACKAGE_LIBRETRO_STELLA
 
 	# Atari 5200
 	select BR2_PACKAGE_LIBRETRO_A5200		# ALL
@@ -1502,9 +1502,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250  || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
-
-
-	select BR2_PACKAGE_LIBRETRO_BEETLE_PCE_FAST	# ALL
+	select BR2_PACKAGE_LIBRETRO_BEETLE_PCE_FAST     if !BR2_PACKAGE_LIBRETRO_BEETLE_PCE
 	select BR2_PACKAGE_LIBRETRO_BEETLE_SUPERGRAFX	# ALL
 
 	# Vectrex
