--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-jz4770.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-jz4770.yml
@@ -17,6 +17,9 @@ amigacd32:
 amigacdtv:
   emulator: libretro
   core:     puae
+atari2600:
+  emulator: libretro
+  core:     stella2014
 mastersystem:
   emulator: libretro
   core:     picodrive
