--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -1492,6 +1492,9 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	# Atari 5200
 	select BR2_PACKAGE_LIBRETRO_A5200		# ALL
 
+	# Atari 7800
+	select BR2_PACKAGE_LIBRETRO_PROSYSTEM		# ALL
+
 	# NEC PC-Engine / TurboGrafx / SuperGrafx range
 	select BR2_PACKAGE_LIBRETRO_BEETLE_PCE		if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY || \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2711 || \
@@ -1534,13 +1537,9 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	# Super Nintendo / Super Famicom
 	select BR2_PACKAGE_SNES9X			if (BR2_ARCH_IS_64 && BR2_PACKAGE_HAS_LIBGL)
 
-	select BR2_PACKAGE_LIBRETRO_SNES9X		if !BR2_PACKAGE_BATOCERA_TARGET_BCM2835
-	select BR2_PACKAGE_LIBRETRO_SNES9X_NEXT		if !BR2_PACKAGE_BATOCERA_TARGET_BCM2835
-	select BR2_PACKAGE_LIBRETRO_POCKETSNES		if BR2_PACKAGE_BATOCERA_TARGET_BCM2835		|| \
-							   BR2_PACKAGE_BATOCERA_TARGET_BCM2836          || \
-							   BR2_PACKAGE_BATOCERA_TARGET_RK3128		|| \
-							   BR2_PACKAGE_BATOCERA_TARGET_H3		|| \
-							   BR2_PACKAGE_BATOCERA_TARGET_CHA
+	select BR2_PACKAGE_LIBRETRO_SNES9X		if (!BR2_mipsel && !BR2_arm1176jzf_s)
+	select BR2_PACKAGE_LIBRETRO_SNES9X_NEXT		if BR2_mipsel || (!BR2_arm1176jzf_s && !BR2_PACKAGE_LIBRETRO_SNES9X)
+	select BR2_PACKAGE_LIBRETRO_POCKETSNES		if BR2_arm1176jzf_s
 
 	select BR2_PACKAGE_LIBRETRO_BSNES		if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY	|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2711		|| \
@@ -1562,9 +1561,6 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3399		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_A3GEN2
-
-	# Atari 7800
-	select BR2_PACKAGE_LIBRETRO_PROSYSTEM		# ALL
 
 	# Fairchild Channel F
 	select BR2_PACKAGE_LIBRETRO_FREECHAF		if !BR2_PACKAGE_BATOCERA_TARGET_CHA
