--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-s9gen4.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-s9gen4.yml
@@ -2,6 +2,9 @@ default:
   options:
     gfxbackend: gl
 
+3ds:
+  emulator: libretro
+  core:     panda3ds
 nds:
   emulator: libretro
   core:     melonds
