--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-s905gen3.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-s905gen3.yml
@@ -5,6 +5,9 @@ default:
     retroarch.menu_driver: xmb
     retroarch.audio_driver: alsathread
 
+3ds:
+  emulator: libretro
+  core:     panda3ds
 nds:
   emulator: libretro
   core:     melonds
