--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -1002,6 +1002,9 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 	select BR2_PACKAGE_PANDA3DS			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
 							   (BR2_aarch64 && BR2_PACKAGE_BATOCERA_GLES3)
 
+	select BR2_PACKAGE_LIBRETRO_PANDA3DS		if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
+							   (BR2_aarch64 && BR2_PACKAGE_BATOCERA_GLES3)
+
 	# PSP
 	# Note: JZ4770 compiles and links fine, just too slow
 	select BR2_PACKAGE_PPSSPP			if !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_PACKAGE_BATOCERA_TARGET_CHA && !BR2_PACKAGE_BATOCERA_TARGET_JZ4770
